--- a/src/styles/main.agents.style.css
+++ b/src/styles/main.agents.style.css
@@ -7,43 +7,34 @@
   --font-color-primary: white;
 }
 
-main {
-  display: flex;
-}
-
-#agents-section {
-  display: flex;
-}
-
-#content-agents {
+.agents-section .content-agents {
   border: 1px solid var(--color-tertiary);
+  border-radius: 3px;
   margin: 15px;
-  width: 400px;
 }
 
-.agent {
+.content-agents .agent {
   display: flex;
-  margin: 15px;
+  margin: 10px;
+  width: 350px;
 }
 
 .agent .content-img {
-  border: 1.5px solid var(--color-secondary);
-  border-radius: 10px;
   display: flex;
-  height: 200px;
-  width: 220px;
+  height: 150px;
+  width: 180px;
   justify-content: center;
 }
 
 .content-img img {
-  height: 200px;
+  height: 150px;
   position: absolute;
 }
 
 .content-img .img-blur {
   border-radius: 10px;
-  height: 200px;
-  width: 220px;
+  height: 150px;
+  width: 180px;
   filter: blur(2px);
   position: absolute;
   z-index: 0;
@@ -53,7 +44,12 @@ main {
   color: var(--color-secondary);
   display: flex;
   flex-direction: column;
-  margin: 15px;
+  margin: 10px;
+  justify-content: center;
+}
+
+.content-info h1, p {
+  margin: 2px;
 }
 
 .content-info .phone-toggle {
@@ -61,21 +57,11 @@ main {
   text-decoration: underline;
 }
 
+.content-info .phone-toggle:hover {
+  cursor: pointer;
+}
+
 .content-info .phone {
   color: var(--color-primary);
   font-weight: 700;
-}
-
-/* Estilos para telas de desktop (largura maior que 1024px) */
-@media (min-width: 1025px) {
-  
-}
-
-/* Estilos para tablets (largura entre 769px e 1024px) */
-@media (min-width: 769px) and (max-width: 1024px) {
-  
-}
-
-/* Estilos para dispositivos móveis (largura até 768px) */
-@media (max-width: 768px) {
 }
