--- a/src/styles/main.canvas.style.css
+++ b/src/styles/main.canvas.style.css
@@ -7,55 +7,35 @@
   --font-color-primary: white;
 }
 
-.message-section .form {
-  border: 1px solid var(--color-tertiary);
-  border-radius: 3px;
+.contains-img-2 {
   margin: 15px;
   padding: 10px;
   display: flex;
   flex-direction: column;
   position: relative;
-  justify-content: left;
+  align-items: center;
 }
 
-.form label {
-  display: flex;
-  flex-direction: column;
+.contains-img-2 img {
+  border-radius: 3px;
+  height: 250px;
+  margin-bottom: 15px;
 }
 
-.span-input-cpf {
-  display: none;
-  color: var(--color-primary);
-  position: absolute;
-  font-size: 12px;
-  margin-top: 40px;
-}
-
-.span-input-phone {
-  display: none;
-  color: var(--color-primary);
-  position: absolute;
-  font-size: 12px;
-  margin-top: 40px;
-}
-
-.form input {
+.contains-img-2 #rectangle {
+  background-color: #d35009;
+  border-radius: 5px;
+  color: var(--font-color-primary);
   padding: 10px;
-  margin-bottom: 25px;
-  width: 90%;
-}
-
-.form #subject {
-  height: 50px;
-}
-
-.form #subject::placeholder {
+  width: 150px;
+  text-align: center;
   position: absolute;
-  top: 10px;
-  left: 10px;
-} 
+  left: 50%;
+  top: 70%;
+  transform: translate(-50%, -50%);
+}
 
-.form button {
+.contains-img-2 button {
   padding: 5px;
   font-size: 15px;
   color: var(--font-color-primary);
@@ -66,7 +46,7 @@
   width: 150px;
 }
 
-.form button:hover {
+.contains-img-2 button:hover {
   box-shadow: 0px 0px 5px var(--color-primary);
   transition: 0.5s;
   cursor: pointer;
