--- a/src/styles/main.rule-three.style.css
+++ b/src/styles/main.rule-three.style.css
@@ -12,7 +12,8 @@
   border-radius: 3px;
   margin: 15px;
   padding: 10px;
-  width: auto;
+  width: 35vw;
+  position: relative;
 }
 
 .contains-rule-three .contains-columns {
@@ -55,4 +56,73 @@
   box-shadow: 0px 0px 5px var(--color-primary);
   transition: 0.5s;
   cursor: pointer;
+}
+
+/* Estilos para telas de desktop (largura maior que 1024px) */
+@media (min-width: 1025px) {
+  .line-between-1 {
+    border: 0;
+    border-top: 1px solid #000;
+    width: 40px;
+    margin-top: 33px;
+    margin-left: 47%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+  }
+  
+  .line-between-2 {
+    border: 0;
+    border-top: 1px solid #000;
+    width: 40px;
+    margin-top: 83px;
+    margin-left: 47%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+  }
+}
+
+/* Estilos para tablets (largura entre 769px e 1024px) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .line-between-1 {
+    border: 0;
+    border-top: 1px solid #000;
+    width: 40px;
+    margin-top: 33px;
+    margin-left: 47%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+  }
+  
+  .line-between-2 {
+    border: 0;
+    border-top: 1px solid #000;
+    width: 40px;
+    margin-top: 83px;
+    margin-left: 47%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+  }
+}
+
+/* Estilos para dispositivos móveis (largura até 768px) */
+@media (max-width: 768px) {
+  .line-between-1 {
+    border: 0;
+    border-top: 1px solid #000;
+    width: 20px;
+    margin-top: 33px;
+    margin-left: 47%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+  }
+  
+  .line-between-2 {
+    border: 0;
+    border-top: 1px solid #000;
+    width: 20px;
+    margin-top: 83px;
+    margin-left: 47%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+  }
 }
