--- a/src/styles/main.canvas.style.css
+++ b/src/styles/main.canvas.style.css
@@ -8,18 +8,17 @@
 }
 
 .contains-img-2 {
-  margin: 15px;
-  padding: 10px;
+  margin-left: 10px;
   display: flex;
   flex-direction: column;
   position: relative;
   align-items: center;
+  width: 100%;
 }
 
 .contains-img-2 img {
   border-radius: 3px;
   height: 230px;
-  margin-bottom: 15px;
 }
 
 .contains-img-2 #rectangle {
